# termin-components

.github/workflows/: ci.yml
termin-components-collision/: CMakeLists.txt
termin-components-collision/python/termin/colliders/: collider_component.py
termin-components-kinematic/: CMakeLists.txt
termin-components-kinematic/components/: actuator_component.cpp  actuator_component.hpp  kinematic_bindings.cpp  kinematic_unit_component.cpp  kinematic_unit_component.hpp  rotator_component.cpp  rotator_component.hpp
termin-components-kinematic/python/termin/kinematic/: kinematic_components.py
termin-components-mesh/: CMakeLists.txt
termin-components-mesh/python/termin/mesh/: mesh_component.py
